# fractal-launcher

./: .editorconfig  .env  .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.css.ts  App.tsx  index.css
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/api/http/: mod.rs  refresh.rs  requestor.rs  response.rs
src-tauri/src/commands/: mod.rs  msa_login.rs
src-tauri/src/database/: mod.rs  sqlite.rs
src-tauri/src/entities/: mod.rs  msa_device_authenticate.rs  msa_device_verifing.rs
src-tauri/src/entities/auth/: mod.rs  msa_device_authenticate.rs  msa_device_flow_error.rs  msa_device_verifing.rs  xbl_user_authenticate.rs  xbl_xsts_authorize.rs
src-tauri/src/entities/auth/device_flow/: authenticate.rs  error.rs  mod.rs  verifing.rs
src-tauri/src/entities/auth/request/: mod.rs  msa_device_authenticate.rs  msa_device_verifing.rs  xbl_user_authenticate.rs  xbl_xsts_authorize.rs
src-tauri/src/entities/auth/xboxlive/: mod.rs  user_authenticate.rs  xsts_authorize.rs
src-tauri/src/entities/minecraft/: arguments.rs  asset.rs  engine.rs  java_ver.rs  library.rs  logging.rs  mod.rs  package.rs  rule.rs  versions.rs
src-tauri/src/entities/minecraft/request/: mod.rs  package.rs  versions.rs
src/app/: FooterNavi.css.ts  FooterNavi.tsx  HeaderTools.tsx  PlaceHolder.tsx  Schedule.tsx  SideBar.tsx
src/app/footer/: Signin.tsx
src/windowed/: TitleBar.css.ts  TitleBar.tsx
