[package]
name = "fractal-launcher"
version = "0.0.0"
description = "Launcher and Mod Management application for Modded Minecraft"
authors = ["ReiRokusanami"]
license = "GPL-3.0-or-later"
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "clipboard", "system-tray"] }

tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "fmt", "env-filter"] }
tracing-appender = "0.2"

dotenvy = "0.15"
walkdir = "2.3.2"
anyhow = "1"
thiserror = "1"

sqlx = { version = "0.6.2", features = ["sqlite", "runtime-tokio-rustls", "time"] }
url = "2.3.1"
reqwest = { version = "0.11", features = ["json"] }

async-trait = "0.1.60"
rayon = "1.6.1"
time = "0.3.17"
once_cell = "1.16.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
